@@ -2,11 +2,13 @@
 
 *eix-0.25.4
 	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
+	- Introduce -y (--any) to select any match field: don't miss anything.
 	- Set umask 002 in eix-update unless option -o is used, see
 	  http://bugs.gentoo.org/show_bug.cgi?id=408509
 	- Rely on working delete 0; should speed up things slightly
 	- Avoid std::auto_ptr
 	- Default to most current C++ dialect and use nullptr if possible
+	- Add some more ATTRIBUTE_PURE
 	- configure.ac: Fix usage of MV_APPEND
 	- scripts: Simplify quoting slightly
 
